--- a/question/templates/question/index.html
+++ b/question/templates/question/index.html
@@ -54,9 +54,21 @@
 
 <!-- react-empty: 42 -->
 
-<button class="Button AppHeader-profileEntry Button--plain" type="button" id="Popover-88478-48941-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-88478-48941-content">
-<img class="Avatar AppHeader-profileAvatar" width="30" height="30" src="https://pic1.zhimg.com/da8e974dc_is.jpg" srcset="https://pic1.zhimg.com/da8e974dc_im.jpg 2x">
-</button>
+<span class="dropdown">
+<img class="Avatar AppHeader-profileAvatar" data-toggle="dropdown" width="30" height="30" src="/media/img/default.jpg" srcset="/media/img/default.jpg 2x">
+<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+<li>
+<a id="action-1" href="/er/{{user.id}}">Homepage</a>
+</li>
+<li>
+<a href="#">Setting</a>
+</li>
+<li>
+<a href="/exit/">Exit</a>
+</li>   
+</ul>
+</span>
+
 <!-- react-empty: 1239 -->
 </div>
 </div>
@@ -153,7 +165,7 @@ function title() {
   
 //模拟动态加载内容(真实情况可能会跟后台进行ajax交互)  
 function content() {  
-    var data = $("<form><ul><li><span aria-hidden='true' class='icon_globe'></span>&nbsp;<font>粉丝数:</font>7389223</li>" +  
+    var data = $("<form><ul><li><span aria-hidden='true' class='icon_globe'></span>&nbsp;<font>粉丝数1:</font>7389223</li>" +  
              "<li><span aria-hidden='true' class='icon_piechart'></span>&nbsp;<font>关注:</font>265</li>" +  
              "<li><span aria-hidden='true' class='icon_search_alt'></span>&nbsp;<font>微博:</font>645</li>" +  
              "<li><span aria-hidden='true' class='icon_pens_alt'></span>&nbsp;<font>所在地:</font>台湾</li>" +  
@@ -301,6 +313,9 @@ getMoreData();
 } 
 } 
 
+$(function() {
+    $(".dropdown-toggle").dropdown('toggle');
+});
     </script>
 
 </body>
