--- a/question/templates/question/t_mytopic.html
+++ b/question/templates/question/t_mytopic.html
@@ -89,6 +89,8 @@
 
 </div>
 
+<div><a href="/topics/">更多话题</a><div>
+
 <!--- div other--->
 <!-- 模态框（Modal） -->
 <div class="modal fade" id="askModal" tabindex="-1" role="dialog" aria-labelledby="askModalLabel" aria-hidden="true">
