--- a/question/templates/question/index.html
+++ b/question/templates/question/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.css' %}">
     <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'common/z_main.css' %}">
 </head>
 <body>
 
@@ -79,24 +80,66 @@
         <!--------------------main---------------------->
         <main role="main">
         <div class="row">
-        <div id="QuestionItems" class="col-md-8">
+        <div id="QuestionItems" class="col-md-offset-1 col-md-7">
         {% if question_list %}
             {% for question in question_list %}
-        <div class="QuestionFrame font-black">
-            <div>来自话题:<a href="/topic/{{ question.2 }}/">{{ question.3 }}</a></div>
-            <div>
-            <a href="/question/{{ question.0 }}/">{{ question.1 }}</a>
+        <div class="QuestionFrame Card">
+            <div class="Feed">
+                <div class="Feed-title">
+                    <div class="Feed-meta">
+                        <span class="Feed-meta-item">来自话题:<span>
+                        <a href="/topic/{{ question.2 }}/" class="bind_hover_card" data-topic-id="{{question.2}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">{{ question.3 }}</a>
+                    </div>
+                </div>
+
+                <div class="AuthorInfo Feed-meta-author AuthorInfo--plain">
+                    <span class="UserLink AuthorInfo-avatarWrapper">
+                        <img src="/media/{{question.7 }}" href="/er/{{ question.5 }}/" width="40" height="40" class="bind_hover_card" data-author-id="{{question.5}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">
+                    </span>
+                    <div class="AuthorInfo-content">
+                        <div class="AuthorInfo-head">
+                            <span class="UserLink AuthorInfo-name">
+                                <a href="/er/{{ question.5 }}/" class="bind_hover_card" data-author-id="{{question.5}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">{{ question.6 }}</a>
+                            </span>
+                        </div>
+                        <div class="AuthorInfo-detail">
+                            <div class="AuthorInfo-badge">
+                                <div class="RichText AuthorInfo-badgeText">
+                                    {{question.8}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ContentItem AnswerItem">
+                    <h2 class="ContentItem-title">
+                        <a href="/question/{{ question.0 }}/">{{ question.1 }}</a>
+                    </h2>
+                    <div class="RichContent is-collapsed">
+                        <div class="RichContent-cover">
+                            <div class="RichContent-cover-inner">
+                            </div>
+                        </div>
+                        <div class="RichContent-inner">
+                            <span class="RichText CopyrightRichText-richText">
+                                {{question.9|safe}}
+                            </span>
+                            <button class="Button ContentItem-more Button--plain" type="button" data-reactid="256">
+                                阅读全文
+                                <svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" style="height:16px;width:10px;" width="10" height="16" aria-hidden="true" data-reactid="258"><title data-reactid="259"></title><g data-reactid="260"><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg>
+                            </button>
+                        </div>
+                        <div class="ContentItem-actions">
+                            <span>
+                                <button class="AnswerLike Button LikeButton 1ContentItem-action" type="button" data-answer-id="{{ question.4 }}">
+                                    <svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon 1Icon--like" style="height:16px;width:13px;" width="13" height="16" aria-hidden="true" data-reactid="433"><title data-reactid="434"></title><g data-reactid="435"><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>{{question.10}}
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            <!--<div class="AnswerLike" data-answer-id="{{ question.4 }}">{{ question.10}}</div>-->
             </div>
-            <div style="float:left;">
-                <img src="/media/{{question.7 }}" href="/er/{{ question.5 }}/" width="40" height="40" class="bind_hover_card" data-author-id="{{question.5}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">
-            </div>
-            <div style="float:left;">
-                <a href="/er/{{ question.5 }}/" class="bind_hover_card" data-author-id="{{question.5}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">{{ question.6 }}</a>
-            </div>
-            <div>,{{question.8}}</div>
-            <div style="clear:both;"></div>
-            <div>{{question.9|safe}}</div>
-            <div class="AnswerLike" data-answer-id="{{ question.4 }}">{{ question.10}}</div>
         </div>
         
         <div>&nbsp;</div>
