--- a/static/common/main.css
+++ b/static/common/main.css
@@ -246,6 +246,8 @@ form input[type=password] {
     border-style:solid; 
     border-width:1px; 
     */
+    padding:2%;
+    word-wrap:break-word;
     background-color:#ffffff;
 }
 
