upload img modify

--- a/question/templates/question/index.html
+++ b/question/templates/question/index.html
@@ -94,7 +94,7 @@
 
                 <div class="AuthorInfo Feed-meta-author AuthorInfo--plain">
                     <span class="UserLink AuthorInfo-avatarWrapper">
-                        <img src="/media/{{question.7 }}" href="/er/{{ question.5 }}/" width="40" height="40" class="bind_hover_card" data-author-id="{{question.5}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">
+                        <img src="{{question.7 }}" href="/er/{{ question.5 }}/" width="40" height="40" class="bind_hover_card" data-author-id="{{question.5}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">
                     </span>
                     <div class="AuthorInfo-content">
                         <div class="AuthorInfo-head">
