--- a/question/templates/question/t_er_active.html
+++ b/question/templates/question/t_er_active.html
@@ -68,7 +68,7 @@
         
 
         <div class="row">
-        <img id="pic" src="/media/{{ user.userprofile.avatar }}" width="60" height="60">
+        <img id="pic" src="{{ user.userprofile.avatar }}" width="60" height="60">
         <input id="upload" name="file" accept="image/*" type="file" style="display: none"/>
         <div class="TheQuestion col-md-8">
         <div>people homepage</div>
@@ -198,7 +198,7 @@ form_data.append('imgfile',file_info);
 
 // 提交ajax的请求
 $.ajax({
-url:"/ajax/upload/img/",
+url:"/ajax/upload/avatar/",
 type:'POST',
 data: form_data,
 processData: false,  // tell jquery not to process the data
