--- a/question/templates/question/index.html
+++ b/question/templates/question/index.html
@@ -81,6 +81,7 @@
         <main role="main">
         <div class="row">
         <div id="QuestionItems" class="col-md-offset-1 col-md-7">
+        <!--
         {% if question_list %}
             {% for question in question_list %}
         <div class="QuestionFrame Card">
@@ -111,6 +112,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="ContentItem AnswerItem">
                     <h2 class="ContentItem-title">
                         <a href="/question/{{ question.0 }}/">{{ question.1 }}</a>
@@ -118,6 +120,7 @@
                     <div class="RichContent is-collapsed">
                         <div class="RichContent-cover">
                             <div class="RichContent-cover-inner">
+                                <img src="/media/img/wudy1510883020.jpg">
                             </div>
                         </div>
                         <div class="RichContent-inner">
@@ -138,13 +141,12 @@
                         </div>
                     </div>
                 </div>
-            <!--<div class="AnswerLike" data-answer-id="{{ question.4 }}">{{ question.10}}</div>-->
             </div>
         </div>
         
-        <div>&nbsp;</div>
             {% endfor %}
         {% endif %}
+        -->
         </div>
         </div>
         </main>
@@ -204,7 +206,6 @@
 <script src="{% static 'common/main.js' %}"></script>
     
 <script>
-
 function check_answer_like(){
     $(".AnswerLike").each(function(){
         $(this).click(function(){
@@ -224,7 +225,7 @@ function check_popover_show(){
         element=$(this).children(".bind_hover_card");
         authorid=element.attr("data-author-id");
         $.get("/ajax/er/"+authorid+"/",function(ret){
-        var data1='<div><img src="/media/'+ret[2]+'" width="50" height="50">'+'<span style="width:100px"><a href="/er/'+ret[0]+'/">'+ret[1]+'</a><span>'+ret[3]+'</span></span></div>';
+        var data1='<div><img src="'+ret[2]+'" width="50" height="50">'+'<span style="width:100px"><a href="/er/'+ret[0]+'/">'+ret[1]+'</a><span>'+ret[3]+'</span></span></div>';
         var data2='<hr/><div style="float:left;"><div>回答</div><div>'+ret[4]+'</div></div><div><div>关注</div> <div id="follower_num">'+ret[5]+'</div></div>';
         if(ret[6])
             var data3='<hr/><button id="pop-button-follow" class="btn btn-default" type="button" data-er-id="'+ret[0]+'" onclick="unfollow_people()">已关注</button>';
@@ -318,24 +319,113 @@ function getScrollHeight() {
 return Math.max(document.body.scrollHeight, document.documentElement.scrollHeight); 
 } 
 
+function get_index_img(content){
+    var imgReg=/<img.*?(?:>|\/>)/gi;
+    var arr=content.match(imgReg);
+    if(arr!=null)
+    {
+        var srcReg = /src=[\'\"]?([^\'\"]*)[\'\"]?/i;
+        imgsrc=arr[0].match(srcReg);
+        return imgsrc[1];
+    }
+    else
+        return null;
+}
+
+function remove_img(content){
+    var imgReg=/<img.*?(?:>|\/>)/gi;
+    return content.replace(imgReg,"").replace(/<[^>]+>/g,"").replace(/&nbsp;/ig,"").substr(0,200);
+    //return content.replace(imgReg,"").replace(/<p>/gi,"").replace(/<\/p>/gi,"").replace(/(^\s*)|(\s*$)/g,"");
+}
+
 function appendElement(ret)
 {
     for(i in ret)
     {
-    var htmlText='\
-        <div class="QuestionFrame font-black">\
-          <div>来自话题:<a href="/topic/'+ret[i][2]+'/">'+ret[i][3]+'</a></div>\
-          <div><a href="/question/'+ret[i][0]+'/">'+ret[i][1]+'</a></div>\
-          <div style="float:left;"><img src="/media/'+ret[i][7]+'" href="/er/'+ret[i][5]+'/" width="40" height="40" data-author-id="'+ret[i][5]+'" class="bind_hover_card" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true"></div>\
-          <div style="float:left;"><a href="/er/'+ret[i][5]+'/" data-author-id="'+ret[i][5]+'" class="bind_hover_card" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+ret[i][6]+'</a></div>\
-          <div>,'+ret[1][8]+'</div>\
-          <div style="clear:both;"></div>\
-          <div>'+ret[i][9]+'</div>\
-        </div>\
-        <div>&nbsp;</div>\
-    ';
-    $('#QuestionItems').append(htmlText);
+    indexImgSrc=get_index_img(ret[i][9]);
+    var dataStart='<div class="QuestionFrame Card">\
+                        <div class="Feed">\
+                  ';
+    var data1= '<div class="Feed-title">\
+                    <div class="Feed-meta">\
+                        <span class="Feed-meta-item">来自话题:<span>\
+                        <a href="/topic/'+ret[i][2]+'/" class="bind_hover_card" data-topic-id="'+ret[i][2]+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+ret[i][3]+'</a>\
+                    </div>\
+                </div>\
+                ';
+                
+    var data2= '<div class="AuthorInfo Feed-meta-author AuthorInfo--plain">\
+                    <span class="UserLink AuthorInfo-avatarWrapper">\
+                        <img src="'+ret[i][7]+'" href="/er/'+ret[i][5]+'/" width="40" height="40" class="bind_hover_card" data-author-id="'+ret[i][5]+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">\
+                    </span>\
+                    <div class="AuthorInfo-content">\
+                        <div class="AuthorInfo-head">\
+                            <span class="UserLink AuthorInfo-name">\
+                                <a href="/er/'+ret[i][5]+'/" class="bind_hover_card" data-author-id="'+ret[i][5]+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+ret[i][6]+'</a>\
+                            </span>\
+                        </div>\
+                        <div class="AuthorInfo-detail">\
+                            <div class="AuthorInfo-badge">\
+                                <div class="RichText AuthorInfo-badgeText">\
+                                    '+ret[i][8]+'\
+                                </div>\
+                            </div>\
+                        </div>\
+                    </div>\
+                </div>\
+                ';
+                
+    var data3=' <div class="ContentItem AnswerItem">\
+                    <h2 class="ContentItem-title">\
+                        <a href="/question/'+ret[i][0]+'/">'+ret[i][1]+'</a>\
+                    </h2>\
+                    <div class="RichContent is-collapsed">\
+                        <div class="RichContent-cover">\
+                            <div class="RichContent-cover-inner">\
+                                <img src="'+indexImgSrc+'">\
+                            </div>\
+                        </div>\
+                        <div class="RichContent-inner">\
+                            <span class="RichText CopyrightRichText-richText less">'+remove_img(ret[i][9])+'</span>\
+                            <span class="RichText CopyrightRichText-richText more is-hide">'+ret[i][9]+'</span>\
+                            <button class="Button ContentItem-more Button--plain" type="button">\
+                                阅读全文\
+                                <svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" style="height:16px;width:10px;" width="10" height="16" aria-hidden="true" data-reactid="258"><title data-reactid="259"></title><g data-reactid="260"><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg>\
+                            </button>\
+                            <button class="Button ContentItem-less Button--plain is-hide" type="button">\
+                                收起\
+                                <svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg>\
+                            </button>\
+                        </div>\
+                        <div class="ContentItem-actions">\
+                            <span>\
+                                <button class="AnswerLike Button LikeButton 1ContentItem-action" type="button" data-answer-id="'+ret[i][4]+'">\
+                                    <svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon 1Icon--like" style="height:16px;width:13px;" width="13" height="16" aria-hidden="true" data-reactid="433"><title data-reactid="434"></title><g data-reactid="435"><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>'+ret[i][10]+'\
+                                </button>\
+                            </span>\
+                        </div>\
+                    </div>\
+                </div>\
+                ';
+    
+    var dataEnd='</div>\
+                    </div>\
+                  ';  
+    var elementText=dataStart+data1+data2+data3+dataEnd;
+    $('#QuestionItems').append(elementText);
     }
+}
+function check_content_more(){
+    $(".RichContent-inner").each(function(){
+        $(this).click(function(){
+            $(this).children(".less").addClass("is-hide");
+            $(this).children(".more").removeClass("is-hide");
+            $(this).children(".ContentItem-more").addClass("is-hide");
+            $(this).children(".ContentItem-less").removeClass("is-hide");
+            $(this).parent().removeClass("is-collapsed");
+            $(this).prev(".RichContent-cover").remove();
+        });
+    });
 }
 
 //获取文档完整的高度 
@@ -343,11 +433,12 @@ function getMoreData() {
     nums=$('.QuestionFrame').length;
     order=1;//pub_date
     start=nums;
-    end=start+2;
+    end=start+5;
     $.get('/ajax/questions/'+order+'/'+start+'/'+end+'/',function(ret){          
         appendElement(ret);
         //$('.bind_hover_card').popover();   
         check_popover_show();
+        check_content_more();
     });
 } 
 
@@ -363,6 +454,7 @@ if (getScrollTop() + getClientHeight() +1 >= getScrollHeight()) {
 
 $(function() {
     $(".dropdown-toggle").dropdown('toggle');
+    getMoreData();
 });
 
 
