--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -552,7 +552,7 @@ function appendElement(ret)
     {
         var htmlText='<div class="adept-item">\
                     <div  style="float:left;">\
-                        <img src="/media/'+ret[i][2]+'" width="40" height="40">\
+                        <img src="'+ret[i][2]+'" width="40" height="40">\
                     </div>\
                     <div  style="float:left;">\
                         <a>'+ret[i][1]+'</a>\
