--- a/question/templates/question/index.html
+++ b/question/templates/question/index.html
@@ -71,7 +71,7 @@
 <img class="Avatar AppHeader-profileAvatar CPopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="/media/img/default.jpg" srcset="/media/img/default.jpg 2x">
 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 <li>
-<a id="action-1" href="/er/{{user.id}}">Homepage</a>
+<a id="action-1" href="/er/{{user.id}}/answers/">Homepage</a>
 </li>
 <li>
 <a href="#">Setting</a>
@@ -83,7 +83,6 @@
 </span>
 </div>
 </div>
-
 
 </div>
 
@@ -293,12 +292,19 @@ function check_popover_show(){
                 element=$(this).children(".APopover");
                 authorid=element.attr("data-author-id");
                 $.get("/ajax/er/"+authorid+"/",function(ret){
-                    var data1='<div><img src="'+ret[2]+'" width="50" height="50">'+'<span style="width:100px"><a href="/er/'+ret[0]+'/">'+ret[1]+'</a><span>'+ret[3]+'</span></span></div>';
-                    var data2='<hr/><div style="float:left;"><div>回答</div><div>'+ret[4]+'</div></div><div><div>关注</div> <div id="follower_num">'+ret[5]+'</div></div>';
-                    if(ret[6])
-                        var data3='<hr/><button id="pop-button-follow" class="btn btn-default" type="button" data-er-id="'+ret[0]+'" data-people-followed="true" onclick="follow_people()">已关注</button>';
+                    er_id=ret[0];
+                    er_name=ret[1];
+                    er_avatar=ret[2];
+                    er_mood=ret[3];
+                    er_answer_nums=ret[4];
+                    er_follower_nums=ret[5];
+                    er_followed=ret[6];
+                    var data1='<div class="AnswerAuthor-user"><div class="AnswerAuthor-user-avatar"><span class="UserLink"><a class="UserLink-link" href="/er/'+er_id+'/"><img class="Avatar Avatar--large UserLink-avatar" width="60" height="60" src="'+er_avatar+'" srcset="'+er_avatar+'" alt="'+er_name+'"></a></span></div><div class="AnswerAuthor-user-content"><div class="AnswerAuthor-user-name"><span class="UserLink"><a class="UserLink-link" href="/er/'+er_id+'/">'+er_name+'</a></span></div><div class="AnswerAuthor-user-headline"><div class="RichText">'+er_mood+'</div></div></div></div>';
+                    var data2='<hr/><div class="AnswerAuthor-counts"><div class="NumberBoard"><a class="1Button NumberBoard-item 1Button--plain" type="button" href="/er/'+er_id+'/answers/"><div class="NumberBoard-name">回答</div><div class="NumberBoard-value">'+er_answer_nums+'</div></a><a class="1Button NumberBoard-item 1Button--plain" data-za-detail-view-element_name="Post" type="button" href="/people/ha-wei-18-55/posts"><div class="NumberBoard-name">文章</div><div class="NumberBoard-value">10</div></a><a class="1Button NumberBoard-item 1Button--plain" data-za-detail-view-element_name="Follower" type="button" href="/er/'+er_id+'/followers"><div class="NumberBoard-name">关注者</div><div class="NumberBoard-value">'+er_follower_nums+'</div></a></div></div>';
+                    if(er_followed)
+                        var data3='<hr/><button id="pop-button-follow" class="btn btn-default" type="button" data-er-id="'+er_id+'" data-people-followed="true" onclick="follow_people()">已关注</button>';
                     else
-                        var data3='<hr/><button id="pop-button-follow" class="btn btn-success" type="button" data-er-id="'+ret[0]+'" data-people-followed="false" onclick="follow_people()">关注</button>';
+                        var data3='<hr/><button id="pop-button-follow" class="btn btn-success" type="button" data-er-id="'+er_id+'" data-people-followed="false" onclick="follow_people()">关注</button>';
                     var data=data1+data2+data3;
                     element.attr("data-content",data);
                     element.popover('show');
@@ -316,28 +322,32 @@ function check_popover_show(){
                 element=$(this).children(".BPopover");
                 topicid=element.attr("data-topic-id");
                 $.get("/ajax/topic/"+topicid+"/",function(ret){
-                    var data1='<div><img src="'+ret[2]+'" width="50" height="50">'+'<span style="width:100px"><a href="/topic/'+ret[0]+'/">'+ret[1]+'</a></span></div>';
-                    var data2='<hr/><div style="float:left;"><div>问题</div><div>'+ret[3]+'</div></div><div><div>关注者</div> <div id="follower_num">'+ret[4]+'</div></div>';
-                    if(ret[5])
-                        var data3='<hr/><button id="pop-button-follow" class="btn btn-default" type="button" data-topic-id="'+ret[0]+'" data-topic-followed="true" onclick="follow_topic()">已关注</button>';
+                    topic_id=ret[0];
+                    topic_name=ret[1];
+                    topic_avatar=ret[2];
+                    topic_question_nums=ret[3];
+                    topic_follower_nums=ret[4];
+                    topic_followed=ret[5];
+                    var data1='<div class="AnswerAuthor-user"><div class="AnswerAuthor-user-avatar"><span class="UserLink"><a class="UserLink-link" href="/topic/'+topic_id+'/"><img class="Avatar Avatar--large UserLink-avatar" width="60" height="60" src="'+topic_avatar+'" srcset="'+topic_avatar+'" alt="'+topic_name+'"></a></span></div><div class="AnswerAuthor-user-content"><div class="AnswerAuthor-user-name"><span class="UserLink"><a class="UserLink-link" href="/topic/'+topic_id+'/">'+topic_name+'</a></span></div></div></div>';
+                    var data2='<hr/><div class="AnswerAuthor-counts"><div class="NumberBoard"><a class="Button NumberBoard-item Button--plain" data-za-detail-view-element_name="Answer" type="button" href="/topic/'+topic_id+'/questions/"><div class="NumberBoard-name">问题</div><div class="NumberBoard-value">'+topic_question_nums+'</div></a><a class="Button NumberBoard-item Button--plain" data-za-detail-view-element_name="Post" type="button" href="/people/ha-wei-18-55/posts"><div class="NumberBoard-name">文章</div><div class="NumberBoard-value">10</div></a><a class="Button NumberBoard-item Button--plain" data-za-detail-view-element_name="Follower" type="button" href="/topic/'+topic_id+'/followers"><div class="NumberBoard-name">关注者</div><div class="NumberBoard-value">'+topic_follower_nums+'</div></a></div></div>';
+                    if(topic_followed)
+                        var data3='<hr/><button id="pop-button-follow" class="btn btn-default" type="button" data-topic-id="'+topic_id+'" data-topic-followed="true" onclick="follow_topic()">已关注</button>';
                     else
-                        var data3='<hr/><button id="pop-button-follow" class="btn btn-success" type="button" data-topic-id="'+ret[0]+'" data-topic-followed="false" onclick="follow_topic()">关注</button>';
+                        var data3='<hr/><button id="pop-button-follow" class="btn btn-success" type="button" data-topic-id="'+topic_id+'" data-topic-followed="false" onclick="follow_topic()">关注</button>';
                     var data=data1+data2+data3;
                     element.attr("data-content",data);
                     element.popover('show');
-                    //element.siblings(".popover").attr("in",true);
-                    //element.siblings(".popover").children().attr("in",true);
                 });
             },function(){
                     $(this).children(".BPopover").popover('hide');
-                    //setTimeout(function(){/*if ($(this).attr("in")) console.log("true"); else console.log("not ture");*/$(this).children().popover('hide');},1000);
             });
     });
     
-    $('.CPopover').click(function(){
+    $('.CPopover').click(function(e){
+        e.stopPropagation();
         var data='<ul>\
                 <li>\
-                <a id="action-1" href="/er/{{user.id}}">Homepage</a>\
+                <a id="action-1" href="/er/{{user.id}}/answers/">Homepage</a>\
                 </li>\
                 <li>\
                 <a href="#">Setting</a>\
@@ -348,6 +358,7 @@ function check_popover_show(){
                 </ul>';
         $('.CPopover').attr("data-content",data);
         $('.CPopover').popover('show');
+
     });
     
 }
@@ -476,32 +487,43 @@ function appendElement(ret)
 {
     for(i in ret)
     {
-    indexImgSrc=get_index_img(ret[i][9]);
+    question_id=ret[i][0];
+    question_title=ret[i][1];
+    topic_id=ret[i][2];
+    topic_name=ret[i][3];
+    answer_id=ret[i][4];
+    author_id=ret[i][5];
+    author_name=ret[i][6];
+    anthor_avatar=ret[i][7];
+    anthor_mood=ret[i][8];
+    answer_content=ret[i][9];
+    answer_like_nums=ret[i][10];
+    indexImgSrc=get_index_img(answer_content);
     var dataStart='<div class="QuestionFrame Card">\
                         <div class="Feed">\
                   ';
     var data1= '<div class="Feed-title">\
                     <div class="Feed-meta">\
                         <span class="Feed-meta-item">来自话题:<span>\
-                        <a href="/topic/'+ret[i][2]+'/" class="BPopover" data-topic-id="'+ret[i][2]+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+ret[i][3]+'</a>\
+                        <a href="/topic/'+topic_id+'/" class="BPopover" data-topic-id="'+topic_id+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+topic_name+'</a>\
                     </div>\
                 </div>\
                 ';
                 
     var data2= '<div class="AuthorInfo Feed-meta-author AuthorInfo--plain">\
                     <span class="UserLink AuthorInfo-avatarWrapper">\
-                        <img src="'+ret[i][7]+'" href="/er/'+ret[i][5]+'/" width="40" height="40" class="APopover" data-author-id="'+ret[i][5]+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">\
+                        <img src="'+anthor_avatar+'" href="/er/'+author_id+'/" width="40" height="40" class="APopover" data-author-id="'+author_id+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">\
                     </span>\
                     <div class="AuthorInfo-content">\
                         <div class="AuthorInfo-head">\
                             <span class="UserLink AuthorInfo-name">\
-                                <a href="/er/'+ret[i][5]+'/" class="APopover" data-author-id="'+ret[i][5]+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+ret[i][6]+'</a>\
+                                <a href="/er/'+author_id+'/" class="1APopover" data-author-id="'+author_id+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+author_name+'</a>\
                             </span>\
                         </div>\
                         <div class="AuthorInfo-detail">\
                             <div class="AuthorInfo-badge">\
                                 <div class="RichText AuthorInfo-badgeText">\
-                                    '+ret[i][8]+'\
+                                    '+anthor_mood+'\
                                 </div>\
                             </div>\
                         </div>\
@@ -511,7 +533,7 @@ function appendElement(ret)
                 
     var data3=' <div class="ContentItem AnswerItem">\
                     <h2 class="ContentItem-title">\
-                        <a href="/question/'+ret[i][0]+'/?ans='+ret[i][4]+'">'+ret[i][1]+'</a>\
+                        <a href="/question/'+question_id+'/?ans='+answer_id+'">'+question_title+'</a>\
                     </h2>\
                     <div class="RichContent is-collapsed">\
                         <div class="RichContent-cover">\
@@ -520,8 +542,8 @@ function appendElement(ret)
                             </div>\
                         </div>\
                         <div class="RichContent-inner">\
-                            <span class="RichText CopyrightRichText-richText less">'+remove_img(ret[i][9])+'</span>\
-                            <span class="RichText CopyrightRichText-richText more is-hide">'+ret[i][9]+'</span>\
+                            <span class="RichText CopyrightRichText-richText less">'+remove_img(answer_content)+'</span>\
+                            <span class="RichText CopyrightRichText-richText more is-hide">'+answer_content+'</span>\
                             <button class="Button ContentItem-more Button--plain" type="button">\
                                 阅读全文\
                                 <svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" style="height:16px;width:10px;" width="10" height="16" aria-hidden="true" data-reactid="258"><title data-reactid="259"></title><g data-reactid="260"><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg>\
@@ -529,8 +551,8 @@ function appendElement(ret)
                         </div>\
                         <div class="ContentItem-actions">\
                             <span>\
-                                <button class="AnswerLike Button LikeButton 1ContentItem-action" type="button" data-answer-id="'+ret[i][4]+'">\
-                                    <svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon 1Icon--like" style="height:16px;width:13px;" width="13" height="16" aria-hidden="true" data-reactid="433"><title data-reactid="434"></title><g data-reactid="435"><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>'+ret[i][10]+'\
+                                <button class="AnswerLike Button LikeButton 1ContentItem-action" type="button" data-answer-id="'+answer_id+'">\
+                                    <svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon 1Icon--like" style="height:16px;width:13px;" width="13" height="16" aria-hidden="true" data-reactid="433"><title data-reactid="434"></title><g data-reactid="435"><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>'+answer_like_nums+'\
                                 </button>\
                             </span>\
                             <button class="Button ContentItem-less ContentItem-rightButton Button--plain is-hide" type="button">\
@@ -708,6 +730,10 @@ $(document).ready(function() {
         }
     }
     });
+});
+
+$(document).click(function(e) {
+    $(".CPopover").popover("hide");
 });
 
 </script>
